tests/baselines/reference/instanceQuery-0012.errors.txt
instanceQuery-0012.ts(22,8): error TS1360: Type 'instanceof A1 & A1' does not satisfy the expected type 'instanceof A2 & A1'.
  Constructor typeof A1 is not assignable to constructor typeof A2
instanceQuery-0012.ts(24,10): error TS1360: Type '{}' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
  Object type {} has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
instanceQuery-0012.ts(28,9): error TS1360: Type 'number' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
  Object type Number has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
instanceQuery-0012.ts(30,8): error TS1360: Type 'bigint' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
  Object type BigInt has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
instanceQuery-0012.ts(32,9): error TS1360: Type 'typeof sym' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
  Object type Symbol has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase


==== instanceQuery-0012.ts (5 errors) ====
    // namespace iq0012a {
    
    //     class EmptyBase {}
    //     class B1  extends EmptyBase{ a = 0; }
    //     class B2  extends B1 { b = 0; }
    //     declare let b1: B1;
    
    //     b1 satisfies B2; // should be error, needs message
    
    // }
    
    
    namespace iq0012b {
    
        class EmptyBase {}
        class A1  extends EmptyBase{ a = 0; }
        class A2  extends A1 {}
        declare let a1: instanceof A1;
        const one = 1 as const;
        const sym = Symbol();
    
        a1 satisfies instanceof A2; // should be error
           ~~~~~~~~~
!!! error TS1360: Type 'instanceof A1 & A1' does not satisfy the expected type 'instanceof A2 & A1'.
!!! error TS1360:   Constructor typeof A1 is not assignable to constructor typeof A2
    
        ({}) satisfies instanceof EmptyBase; // should be error
             ~~~~~~~~~
!!! error TS1360: Type '{}' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
!!! error TS1360:   Object type {} has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
    
        // Note: all the primitives below get promoted to object types so the primitive error message is never triggered.  Is that OK?
    
        one satisfies instanceof EmptyBase; // should be error
            ~~~~~~~~~
!!! error TS1360: Type 'number' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
!!! error TS1360:   Object type Number has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
    
        1n satisfies instanceof EmptyBase; // should be error
           ~~~~~~~~~
!!! error TS1360: Type 'bigint' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
!!! error TS1360:   Object type BigInt has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
    
        sym satisfies instanceof EmptyBase; // should be error
            ~~~~~~~~~
!!! error TS1360: Type 'typeof sym' does not satisfy the expected type 'instanceof EmptyBase & EmptyBase'.
!!! error TS1360:   Object type Symbol has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof EmptyBase
    
    
        ////////////////////////////////////////////////////////////////////
        // compare to rhs without instanceof -- none of these are errors, which might not be desirable.
    
        a1 satisfies A2; // not an error
    
        ({}) satisfies EmptyBase; // not an error
    
        one satisfies EmptyBase; // not an error
    
        1n satisfies EmptyBase; // not an error
    
        sym satisfies EmptyBase; // not an error
    
    }